--- a/unik4430/lab_report.tex
+++ b/unik4430/lab_report.tex
@@ -76,7 +76,7 @@
 Figure \ref{fig:f1} and \ref{fig:f2} is two screenshots taken from the oscilloscope. The yellow line is the Passive hydrogen maser, the blue is the from the signal generator. The oscilloscope is triggering on the input from the signal generator. 
 
 \subsection{Observations}
-The two images shows the yellow line moving towards the right. The reason the yellow line is moving to the right, is because the frequency of the signal from the generator is higher and therefor "arrives earlier" than the signal from the maser. When set to trigger on the maser instead, the effect is reversed, the blue line moves towards the left. The generator is in other words, a little fast. How fast you say? Each dotted square on the plot equals 20 ns. The squares are then divided into 5 parts at 4 ns each. During the 7 seconds that separate the two screenshots, the signal from the signal generator advanced by roughly $\frac{1.5}{5}square$  which gives an error of 6 ns. 
+The two images (\ref{fig:f1} and \ref{fig:f2}) shows the yellow line moving towards the right. The reason the yellow line is moving to the right, is because the frequency of the signal from the generator is higher and therefor "arrives earlier" than the signal from the maser. When set to trigger on the maser instead, the effect is reversed, the blue line moves towards the left. The generator is in other words, a little fast. How fast you say? Each dotted square on the plot equals 20 ns. The squares are then divided into 5 parts at 4 ns each. During the 7 seconds that separate the two screenshots, the signal from the signal generator advanced by roughly 5.6 ns (or $\frac{5.6ns}{7s}=0.8ns/s$).
 
 \subsection{Measuring relative frequency error}
 The period for each of the signals are 100 ns. By measuring the time it took for the two signals to go from being in phase once to twice (in phase, out of phase, in phase again), a relative frequency error can be calculated:
@@ -229,7 +229,7 @@ The $E_{noise}$ is specified as:
 \begin{displaymath}
 E_{noise}\frac{\sqrt[]{V_{noise-input}^2 + V_{noise-signal}^2}}{inp.sign.slew rate(\frac{v}{s}) trig. point}(s)
 \end{displaymath}
-Now, because we are only interested in the counters characteristics, we can ignore $V_{noise-signal}$ and $E_{jitter}$. The manual also defines $E_{q} = 66$ ps rms and worst case $V_{noise-input} = 500 \mu V$. The formula for calculating the slew rate is given as $2\pi Vf$, thus for the 10 KHz 1 V amplitude signal:
+Now, because we are only interested in the counters characteristics, we can ignore $V_{noise-signal}$ and $E_{jitter}$. The manual also defines $E_{q} = 66$ ps rms and worst case $V_{noise-input} = 500 \mu V$ rms. The formula for calculating the slew rate is given as $2\pi Vf$, thus for the 10 KHz 1 V amplitude signal:
 \begin{displaymath}
 2\pi\cdot1 V\cdot10\cdot10^3 Hz = 62831.853 V/s
 \end{displaymath}
@@ -243,11 +243,11 @@ Calculating the random uncertainty for the 1V/10KHz signal:
 \begingroup
 \addtolength{\jot}{1em}
 \begin{align}
-E_{noise} = \frac{\sqrt{(500\cdot\sqrt{2})^2} + 0}{62831.853} = 0.011s\\
+E_{noise} = \frac{\sqrt{(500\cdot\sqrt{2})^2 + 0}}{62831.853V/s} = 0.011s\\
 Ess = \sqrt{ (0.011)^2 + 0 } = 0.011s \\
 Eq = 65\cdot10^{-12}\cdot\sqrt{2} = 9.122\cdot10^{-11}s \\
-(Eq)^2 = 8.449\cdot10^{-21} \\
-U_{rnd} = \frac{\sqrt{8.449\cdot10^{-21} + 2\cdot(0.011)^2}}{200} = 7.778\cdot10^{-5}s \\
+(Eq)^2 = 8.449\cdot10^{-21}s \\
+U_{rnd} = \frac{\sqrt{8.449\cdot10^{-21} + 2\cdot(0.011)^2}}{200s} = 7.778\cdot10^{-5}s \\
 \end{align}
 \endgroup
 
@@ -256,8 +256,8 @@ For the 5V/10MHz (reusing some of the steps):
 \begingroup
 \addtolength{\jot}{1em}
 \begin{align}
-E_{noise} = \frac{\sqrt{(500\cdot\sqrt{2})^2} + 0}{314159265.358} = 2.251\cdot10^{-6}s\\
-U_{rnd} = \frac{\sqrt{8.449\cdot10^{-21} + 2\cdot(2.251\cdot10^{-6})^2}}{200} = 1.592\cdot10^{-8}s
+E_{noise} = \frac{\sqrt{(500\cdot\sqrt{2})^2} + 0}{314159265.358V/s} = 2.251\cdot10^{-6}s\\
+U_{rnd} = \frac{\sqrt{8.449\cdot10^{-21} + 2\cdot(2.251\cdot10^{-6})^2}}{200s} = 1.592\cdot10^{-8}s
 \end{align}
 \endgroup
 
