--- a/unik4430/lab_report2.tex
+++ b/unik4430/lab_report2.tex
@@ -179,5 +179,5 @@ Comparing with Symmetricom's own Allan Deviation, the GPS-300 actually performs 
       \caption{FBTB 1 s, Allan Deviation for GPS-300 during holdover mode (blue) and locked mode (pink).}
           \label{fig:del_2_spm1_allan_dev}
 \end{figure}
-When comparing the Allan Deviation for the measurement taken with and without GPS lock (figure \ref{fig:del_2_spm1_allan_dev}), one can observe that the long term stability is better when in locked mode. This is not a surprise, but when observing the plot for the oscillator when in Holdover mode, one can see that the short term stability is better than when disciplined. One could perhaps argue that the oscillator stability in locked mode would benefit from a longer time constant (between GPS synch), but this depends on the temperature variations of the environment of which it is operating. In the lab where this experiment was exercised, the temperature is much more stable than one could hope to encounter "in the wild".
+When comparing the Allan Deviation for the measurement taken with and without GPS lock (figure \ref{fig:del_2_spm1_allan_dev}), one can observe that the long term stability is better when in locked mode. This is not a surprise, but when observing the plot for the oscillator when in Holdover mode, one can see that the short term stability is better than when disciplined. One could perhaps argue that the oscillator short term stability in locked mode would benefit from a longer time constant (between GPS synch), but this depends on the temperature variations of the environment of which it is operating. In the lab where this experiment was exercised, the temperature is much more stable than one could hope to encounter "in the wild".
 \end{document}                     
