--- a/unik4430/lab_report2.tex
+++ b/unik4430/lab_report2.tex
@@ -78,12 +78,12 @@
 \end{figure}
 
 \subsection{Observations}
-Figure \ref{fig:z38xx_oppstart} shows that the GPS receiver on the GPS-300 has a total of 13 satellites visible and that it is currently tracking 11, which is more than sufficient for timing purposes. It is also reasonable to assume that it has finished warming up considering how dramatic the readings where and how they are now. 
+Figure \ref{fig:z38xx_oppstart} is a screenshot taken from the Z38XX software. The blue plot shows PPS TI (current GPSR time interval difference from UTC or GPS) and the red is the current EFC (Electronic Frequency Control) tuning value. The bar on the bottom of the window shown in the figure, shows that the GPS receiver on the GPS-300 has a total of 13 satellites visible and that it is currently tracking 11, which is more than sufficient for timing purposes. Judging by how stable the EFC have become and how the PPS TI seems to have settled around zero, it is reasonable to assume that the oscillator is warmed up. Note also the fall in EFC in figure \ref{fig:Z38XX_gpsdo12} after we occupied the room and the temperature increased. This increase in temperature has to be compensated for.
 
 \begin{figure}[!htb]
   \centering
     \includegraphics[width=1\textwidth]{z38xx_EFC_oppvarmet_zoom.PNG}
-      \caption{Screenshot of Z38XX showing all the collected data, including the warm-up.}
+      \caption{Screenshot of Z38XX EFC values since startup. Note the drop towards the end. This is from when we occupied to room and increased the temperature.}
       \label{fig:Z38XX_gpsdo12}
 \end{figure}
 
@@ -101,19 +101,19 @@ Figure \ref{fig:z38xx_oppstart} shows that the GPS receiver on the GPS-300 has a
           \label{fig:part1_spm3_x38_phase_diff}
 \end{figure}
 
-When comparing the figure \ref{fig:part1_spm3_fbtb_phase_diff} showing phase difference from a frequency back-to-back  measurement done with our setup and figure \ref{fig:part1_spm3_x38_phase_diff} showing the phase difference measured by the internal counter on the GPS-300, it becomes obvious that the counter on the GPS-300 board is less accurate than our setup and therefore measures a little optimistic. The reason is that it has got a completely different and better reference. The CNT-91 timer uses the PHM as a reference while the GPS-300 uses GPS. GPS signals are extremely noisy compared to a PHM. The timer on the GPS-300 is also likely sub-par compared to the CNT-91. 
+When comparing the figure \ref{fig:part1_spm3_fbtb_phase_diff} showing phase difference from a frequency back-to-back  measurement done with our setup and figure \ref{fig:part1_spm3_x38_phase_diff} showing the phase difference measured by the internal counter on the GPS-300, it becomes obvious that there is difference. The measurement made by the counter on the GPS-300 board is more optimistic. The reason for the optimism, is that the GPS-300 is steered towards the GPS signal. Another is that the CNT-91 timer uses the PHM as a 10 MHz reference while the GPS-300 uses 1 PPS from GPS. GPS signals are extremely noisy compared to a PHM and also lack the resolution that the 10 MHz signal offers. The timer on the GPS-300 is also likely sub-par compared to the CNT-91. 
 
 \begin{figure}[!htb]
   \centering
     \includegraphics[width=1\textwidth]{part1_spm4_modified_allan.png}
-      \caption{Modified Allan Deviation for GPS-300 measured by the internal counter (pink) and CNT-91 (blue))}
+      \caption{Modified Allan Deviation for GPS-300 measured by the internal counter (blue) and CNT-91 (pink)}
           \label{fig:part1_spm4_modified_allan}
 \end{figure}
 
 \begin{figure}[!htb]
   \centering
     \includegraphics[width=1\textwidth]{part1_spm4_allan.png}
-      \caption{Allan Deviation for GPS-300 measured by the internal counter (pink) and CNT-91 (blue)}
+      \caption{Allan Deviation for GPS-300 measured by the internal counter (blue) and CNT-91 (pink)}
           \label{fig:part1_spm4_allan}
 \end{figure}
 
@@ -132,10 +132,10 @@ When comparing the figure \ref{fig:part1_spm3_fbtb_phase_diff} showing phase dif
 \end{figure}
 
 \newpage
-When comparing the measurement done by GPS-300's internal counter with our setup in the context of both regular (figure \ref{fig:part1_spm4_modified_allan}) and Modified Allan Deviation (figure \ref{fig:part1_spm4_allan}), it's clear that the measurement on our setup is the correct one. 
+When comparing the measurement done by GPS-300's internal counter with the measurement done by our setup in the context of both regular (figure \ref{fig:part1_spm4_modified_allan}) and Modified Allan Deviation (figure \ref{fig:part1_spm4_allan}), steering, the lack of a high quality reference and counter, results in a incorrect and optimistic measurement (blue plot figure \ref{fig:part1_spm4_modified_allan} and \ref{fig:part1_spm4_allan}) as discussed earlier.  
 
 % spm5 %
-Figure \ref{fig:tek00006} is a screenshot of the oscilloscope and shows both the GPS-300 and the PHM, trigging at the PHM (yellow). Upon observation of the oscilloscope, a PID like oscillation effect could be observed. When studying the figure \ref{fig:part1_spm5_freq_diff} showing the frequency difference made from a measurement done with our setup, this effect becomes more visible. One way to picture it, is that movement along the X-axis on the oscilloscope correlates to "movement" along the the Y-axis on figure \ref{fig:part1_spm5_freq_diff}. 
+Figure \ref{fig:tek00006} is a screenshot of the oscilloscope and shows both the GPS-300 and the PHM, trigging at the PHM (yellow). Upon observation of the oscilloscope, a PID like oscillation effect could be observed. When studying the figure h\ref{fig:part1_spm5_freq_diff} showing the frequency difference made from a measurement done with our setup, this effect becomes more visible. One way to picture it, is that movement along the X-axis on the oscilloscope correlates to "movement" along the the Y-axis on figure \ref{fig:part1_spm5_freq_diff}. 
 
 % spm6 %
 
@@ -148,7 +148,7 @@ Figure \ref{fig:del_1_spm6_mod_allan} and \ref{fig:del_1_spm6_allan} shows the M
 \end{itemize}
 Because of the 1000 point smoothing (green), not much can be said about the stability before 0.1 s. When comparing with the plot for the PHM, it becomes clear that any instability after 0.1 s is not because of the measurement setup, but rather the oscillator itself. However, by using the smoothing method, we are able to obtain resolution that would not be possible because of limitations in the measuring setup, already at 0.1 s instead of $approx$1.6s. By looking at the Modified Allan Deviation for the PHM, the limit of what you could hope to achieve in terms of resolution is revealed. This is because of how the Modified Allan Deviation is calculated by using a running average. This is also what makes it possible to separate white noise from flicker noise since white noise is uncorrelated and therefore possible to reduce by calculating an average.   
 
-Comparing with Symmetricom's own Allan Deviation, the GPS-300 actually performs better than their estimation. At 1 s, we measured 4.42E-11 as opposed to $\approx$ 9.00E-11. At 10 s, we measured 5.20E-11 and they $\approx$6.00E-10.
+Comparing with Symmetricom's own Allan Deviation, the GPS-300 actually performs better than their specifications. At 1 s, we measured 4.42E-11 as opposed to $\approx$ 9.00E-11. At 10 s, we measured 5.20E-11 and they $\approx$6.00E-10.
 
 \begin{figure}[!htb]
   \centering
@@ -188,7 +188,7 @@ When comparing the Allan Deviation for the measurement taken with and without GP
           \label{fig:del_2_spm2_fbtb_blaas_finger}
 \end{figure}
 
-Figure \ref{fig:del_2_spm2_fbtb_blaas_finger} shows what happens when you heat the oscillator up or cool it down. The first peak is when i put my finger on it and and the dip is when i blew air on it. The next peak and dip is from the same, but now the temperature compensation seems to have picked up the change, hence the last deep dip. The bottom-line is that the frequency increases as temperature drops, and decreases as temperature rises. 
+Figure \ref{fig:del_2_spm2_fbtb_blaas_finger} shows what happens when you heat the oscillator up or cool it down. The first peak is when i put my finger on it and and the dip is when i blew air on it. The next peak and dip is from the same, but now the temperature compensation seems to have picked up the change, hence the last deep dip. The bottom-line is that the frequency increases as temperature drops and frequency decreases as temperature rises. 
 After putting GPS-300 into holdover mode which means it is no longer disciplined by the GPS chip on the board, i measured it going from holdover and into locked mode using both out setup, (figure \ref{fig:del_2_spm3_fra_holdover_to_locked}) and the internal counter (figure \ref{fig:del_2_spm3_fra_holdover_to_locked_z38}). Unfortunately, there is an error in the figure \ref{fig:del_2_spm3_fra_holdover_to_locked} where the wrong sample interval has been used. It should have been 10 s instead of 1. However, it still shows how the internal counter has been a little optimistic as mentioned earlier. 
 
 \begin{figure}[!htb]
